--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Woche 11 P 03 - Threadpools</name>
+	<name>Thread pools</name>
 	<comment></comment>
 	<projects>
 	</projects>
